# POAP2RSS

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: deploy-pages.yml
docs/: aws_setup_instructions.md  service description.md
prompts/: build-website.md  coding prompt.md  feature_prompt.md
scripts/: deploy.sh
src/: poap2rss_lambda.py
tests/: smoke-test.sh  test_poap2rss.py
www/: about.html  changelog.html  dormant.html  eleventy.config.js  inactive.html  index.html  package-lock.json  package.json
www/src/: CNAME  about.njk  changelog.njk  inactive.njk  index.njk  style.css
www/src/_includes/: base.njk
