[project]
name = "poap2rss"
version = "0.1.0"
description = "AWS Lambda service that exposes POAP activity as RSS feeds"
requires-python = ">=3.14,<3.15"
dependencies = [
    "boto3>=1.43.45,<2",
    "requests>=2.34.2,<3",
]

[dependency-groups]
dev = ["ruff>=0.15.22,<0.16"]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["B", "E4", "E7", "E9", "F", "I"]
